fix: Java 21 .toList() + delete simplificado em todos os ServiceImpl restantes (Anexo, Auditoria, Categoria, Checklist, Cliente, ClienteTipo, ComunicacaoAux, Comunicacao, Documento, Empresa, Endereco, Equipamento, EquipamentoProjeto, Feedback, Fornecedor, HistoricoLocalizacao, ImagemProjeto, Inspecao, Insumo, Notificacao, Usuario)